css/tap.css
/******************************************
    FONTS
/*****************************************/

@font-face {
    font-family: 'Mikela';
    src: url('../font/MikelaLight.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: "ITCGaramondStdLight";
    src: url('../font/ITCGaramondStdLight.woff2') format('woff2'), url('../font/ITCGaramondStdLight.woff') format('woff');
}
@font-face {
    font-family: "ITCGaramondStdLightItalic";
    src: url('../font/ITCGaramondStdLightItalic.woff2') format('woff2'), url('../font/ITCGaramondStdLightItalic.woff') format('woff');
}


/******************************************
    FRAMING
/*****************************************/

html {
    font-family: abril-display, serif!important;
    font-size: 20px!important;
    color: #000000!important;
}
body {
    font-family: abril-display, serif!important;
    font-size: 20px!important;
    color: #000000!important;
    background-color: #FFFFFF!important;
}
.tap-body {
    max-width: min(100%, 1140px);
    margin: 0 auto 0 auto;
}
body.homepage {
    background-image: url('../img/home-masthead.png');
    background-repeat: no-repeat;
    background-size: auto 100vh;
    background-attachment: fixed;
    background-position: left top;
}
@media (min-width: 1750px) { body.homepage { background-size: cover; } }
p {
    font-size: 18px;
}

/******************************************
    TOP MENU
/*****************************************/

#tap-header-div, #tap-footer-div {
    display: flex;
    background-color: #FFFFFF !important;
    min-height: 60px;
}
#tap-header-div > nav {
    background-color: #FFFFFF !important;
    flex-grow: 1;
}
.navbar {
    padding: 0;
    padding-left: 20px;
}
.bg-light {
    background-color: #FFFFFF!important;
}
.navbar-brand {
    text-decoration: none!important;
}

body.homepage .navbar-brand { display: none; }
body.homepage .navbar-toggler { margin-left: auto; }

.navbar-nav .nav-link, .dropdown-item {
    color: #000000;
    font-style: italic;
    font-size: 20px;
    margin-left: 40px;
    text-decoration: none!important;
    white-space: nowrap;
}
.dropdown-menu {
    margin-left: 40px!important;
}
.dropdown-item {
    margin-left: 10px;
}
b.dropdown-item {
    font-style: normal;
}
b.dropdown-item:hover { background-color: unset !important; }
#tap-navbar a:hover, #tap-nav-div a.active, .dropdown-menu a:hover, .dropdown-menu button:hover {
    color: #008dab!important;
    text-decoration: underline!important;
    text-underline-offset: 10px!important;
    background-color: unset!important;
}

/******************************************
    HEADERS
/*****************************************/

.tap-header-image {
    max-width: 100%!important;
    height: auto!important;
}
h1 {
    font-family: abril-display, serif!important;
    color: #000000!important;
    font-size: 30px!important;
    font-style: italic;
    margin-top: 10px!important;
    margin-bottom: 0px!important;
}

div.hero {
    display: flex;
    width: 100vw;
    height: 60vh;
    align-items: center;
    justify-content: center;
}
h1.hero {
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: "Mikela", sans-serif !important;
    font-style: normal !important;
    font-size: min(12vw, 110px) !important;
    font-weight: 400;
    /*color: #ffffff !important;*/
    box-shadow: 8px 8px 12px rgba(0, 0, 0, 0.6);
    width: 100%;
    height: auto;
    margin: 0;
    /*background-color: rgba(0, 0, 0, 0.4);*/
    background-color: white;
    color: #000000;
}
@media (max-width: 768px) {
    div.hero { height: 30vh; }
}

h2 {
    font-family: abril-display, serif!important;
    color: #000000!important;
    font-weight: normal!important;
    font-style: italic!important;
    font-size: 25px!important;
}
h2.home {
    font-family: "Mikela", sans-serif !important;
    font-style: normal !important;
    font-size: 5vw !important;
    white-space: nowrap;
    padding: 10px 0;
    margin-bottom: 0;
}
h2.multi-line {
    line-height: 36px;
}

h3 {
    font-family: abril-display, serif;
    color: #000000;
}
h3.multi-line {
    line-height: 26px;
    font-weight: bold;
    font-size: 18px;
}

.home-heading {
    display: flex;
    position: relative;
    align-items: center;
    justify-content: center;
    background-color: #FFFFFF;
    box-shadow: 8px 8px 12px rgba(0, 0, 0, 0.4);
}
.home-card {
    padding: 20px 40px 40px 40px;
    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.8);
}
.home-card-top { position: relative; z-index: -1; }
.home-card-top::before {
    content: "";
    line-height: 0;
    font-size: 0;
    position: absolute;
    bottom: 100%;
    z-index: -1;
    height: 10px;
    width: 100%;
    background: linear-gradient(135deg, transparent 50%, white 50%) 0 0, linear-gradient(-135deg, transparent 50%, white 50%) 0 0;
    background-repeat: repeat-x;
    background-size: 16px 20px;
}

.project-card-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-auto-rows: max-content;
    gap: 10px 20px;
}
@media (max-width: 991px) { .project-card-grid { grid-template-columns: 1fr; } }

a.project-card-link { text-decoration: none !important; }
a.project-card-link:hover { padding: 0 10px; color: #000000 !important; }
a .project-card { cursor: pointer; }
a .project-card:hover { background-color: #f2f2f2; }
.project-card {
    display: grid;
    grid-template-rows: 8fr 1fr 1fr;
    height: 300px;
}
.project-card-image {
    width: 100%;
    height: 100%;
    min-height: 0;
    object-fit: cover;
}
.project-card-title, a .project-card-title {
    margin: 0;
    text-decoration: none;
}
a .project-card-description { text-decoration: none; }

.tap-byline-description {
    padding: 0 150px;
    text-decoration: none;
}

figure {
    padding: 10px 10px 0 10px;
    background-color: #F4F4F4;
}
/* ... */

